--- a/start.html
+++ b/start.html
@@ -26,6 +26,7 @@ var utag_data = {
    'page_organization_company': 'AL-Leben',
    'page_organization_brand': 'Alte Leipziger',
    'page_type': 'Produkt',
+   'promotion_creative_name': 'Promo-Creative Name auf der Seite gesetzt - sehr unwahrscheinlich aber dennoch...',
    'user_accessMode': 'extern',
    'user_loginStatus': 'anonymous'
 }
