--- a/start.html
+++ b/start.html
@@ -41,7 +41,9 @@ var utag_data = {
     b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=true;
     a=b.getElementsByTagName(c)[0];a.parentNode.insertBefore(d,a);
     })();
+console.log(utag.data);
 </script>
+
 -->
 	<div class="mainWrapper">
 		<div id="main-text">
