--- a/start.html
+++ b/start.html
@@ -20,7 +20,7 @@ var utag_data = {
    'app_name': 'alh-web',
    'event_category': 'pageview',
    'page_attributes_statusCode': '200',
-   'page_attributes_URL': document.location,
+   'page_attributes_URL': window.document.location.href,
    'page_category_level01': 'Versicherungen',
    'page_category_level02': 'Lebensversicherungen',
    'page_organization_company': 'AL-Leben',
